reports counts spacing fixed

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
     border-radius: 50em; }
 .transac-count {
   display: inline-block;
-    width: 20px;
+    width: 25px;
     height: 20px;
     border-radius: 50em;
 }
